--- a/requirements.txt
+++ b/requirements.txt
@@ -1,38 +1,133 @@
+absl-py==2.3.1
+action-msgs==1.2.2
+action-tutorials-interfaces==0.20.5
+action-tutorials-py==0.20.5
+actionlib-msgs==4.9.0
+aiofiles==24.1.0
+aiohappyeyeballs==2.6.1
+aiohttp==3.13.1
+aiosignal==1.4.0
+ament-cmake-test==1.3.12
+ament-copyright==0.12.14
+ament-cppcheck==0.12.14
+ament-cpplint==0.12.14
+ament-flake8==0.12.14
+ament-index-python==1.4.0
+ament-lint==0.12.14
+ament-lint-cmake==0.12.14
+ament-package==0.14.1
+ament-pep257==0.12.14
+ament-uncrustify==0.12.14
+ament-xmllint==0.12.14
+angles==1.15.0
 annotated-types==0.7.0
 asttokens==3.0.0
-certifi==2025.10.5
+attrs==25.3.0
+beartype==0.21.0
+builtin-interfaces==1.2.2
+casadi==3.7.2
+certifi==2025.8.3
+cffi==2.0.0
 charset-normalizer==3.4.3
-click==8.3.0
+chex==0.1.90
+clarabel==0.11.1
+click==8.2.1
+cola-ml==0.0.7
+cola-plum-dispatch==0.1.4
 comm==0.2.3
+composition-interfaces==1.2.2
 contourpy==1.3.3
+cv-bridge==3.2.1
+cvxpy==1.7.3
+cvxpylayers==0.1.9
 cycler==0.12.1
-debugpy==1.8.17
+debugpy==1.8.16
 decorator==5.2.1
-executing==2.2.1
+demo-nodes-py==0.20.5
+diagnostic-msgs==4.9.0
+diffcp==1.1.4
+dill==0.4.0
+domain-coordinator==0.10.0
+equinox==0.13.0
+etils==1.13.0
+example-interfaces==0.9.3
+examples-rclpy-executors==0.15.4
+examples-rclpy-minimal-action-client==0.15.4
+examples-rclpy-minimal-action-server==0.15.4
+examples-rclpy-minimal-client==0.15.4
+examples-rclpy-minimal-publisher==0.15.4
+examples-rclpy-minimal-service==0.15.4
+examples-rclpy-minimal-subscriber==0.15.4
+executing==2.2.0
+fastjsonschema==2.21.2
 filelock==3.19.1
-fonttools==4.60.1
-fsspec==2025.9.0
+flax==0.11.1
+fonttools==4.59.1
+frozenlist==1.8.0
+fsspec==2025.7.0
+geometry-msgs==4.9.0
 gitdb==4.0.12
-gitpython==3.1.45
+GitPython==3.1.45
+gpjax==0.11.2
+graphviz==0.21
 gurobipy==12.0.3
+humanize==4.13.0
 idna==3.10
+image-geometry==3.2.1
+importlib_resources==6.5.2
+interactive-markers==2.3.2
 ipykernel==6.30.1
-ipython==9.6.0
-ipython-pygments-lexers==1.1.1
+ipython==9.4.0
+ipython_pygments_lexers==1.1.1
+jax==0.7.1
+jax-cuda12-pjrt==0.7.1
+jax-cuda12-plugin==0.7.1
+jaxlib==0.7.1
+jaxtyping==0.3.2
 jedi==0.19.2
-jinja2==3.1.6
-jupyter-client==8.6.3
-jupyter-core==5.8.1
+Jinja2==3.1.6
+joblib==1.5.2
+jsonschema==4.25.1
+jsonschema-specifications==2025.4.1
+jupyter_client==8.6.3
+jupyter_core==5.8.1
 kiwisolver==1.4.9
-markupsafe==3.0.3
-matplotlib==3.10.6
+-e git+https://github.com/vietanhle0101/SS_Learning_MIQP@1bbd8fc803ad8edc9b22a4942f2c9f209c1d5f2c#egg=L2O_MIQP
+laser-geometry==2.4.0
+launch==1.0.10
+launch-ros==0.19.10
+launch-testing==1.0.10
+launch-testing-ros==0.19.10
+launch-xml==1.0.10
+launch-yaml==1.0.10
+lifecycle-msgs==1.2.2
+lightning==2.5.5
+lightning-utilities==0.15.2
+llvmlite==0.45.1
+logging-demo==0.20.5
+map-msgs==2.1.0
+markdown-it-py==4.0.0
+MarkupSafe==3.0.3
+matplotlib==3.10.5
 matplotlib-inline==0.1.7
+mdurl==0.1.2
+message-filters==4.3.8
+ml_dtypes==0.5.3
 mpmath==1.3.0
+msgpack==1.1.1
+multidict==6.7.0
+multipledispatch==1.0.0
+nav-msgs==4.9.0
+nbformat==5.10.4
 nest-asyncio==1.6.0
 networkx==3.5
-numpy==2.3.3
+neuromancer==1.5.6
+numba==0.62.1
+numpy==1.26.4
+numpyro==0.19.0
 nvidia-cublas-cu12==12.8.4.1
 nvidia-cuda-cupti-cu12==12.8.90
+nvidia-cuda-nvcc-cu12==12.9.86
 nvidia-cuda-nvrtc-cu12==12.8.93
 nvidia-cuda-runtime-cu12==12.8.90
 nvidia-cudnn-cu12==9.10.2.21
@@ -44,39 +139,161 @@ nvidia-cusparse-cu12==12.5.8.93
 nvidia-cusparselt-cu12==0.7.1
 nvidia-nccl-cu12==2.27.3
 nvidia-nvjitlink-cu12==12.8.93
+nvidia-nvshmem-cu12==3.3.24
 nvidia-nvtx-cu12==12.8.90
+opt_einsum==3.4.0
+optax==0.2.5
+optree==0.17.0
+orbax-checkpoint==0.11.23
+osqp==1.0.4
+osrf-pycommon==2.1.6
 packaging==25.0
+pandas==2.3.2
 parso==0.8.5
+pcl-msgs==1.0.0
+pendulum-msgs==0.20.5
 pexpect==4.9.0
 pillow==11.3.0
-platformdirs==4.4.0
-prompt-toolkit==3.0.52
-protobuf==6.32.1
-psutil==7.1.0
+platformdirs==4.3.8
+plum-dispatch==1.7.3
+prompt_toolkit==3.0.51
+propcache==0.4.1
+protobuf==6.32.0
+psutil==7.0.0
 ptyprocess==0.7.0
-pure-eval==0.2.3
-pydantic==2.12.0
-pydantic-core==2.41.1
-pygments==2.19.2
-pyparsing==3.2.5
+pure_eval==0.2.3
+pycparser==2.23
+pydantic==2.11.7
+pydantic_core==2.33.2
+pydot==1.4.2
+Pygments==2.19.2
+pyparsing==3.2.3
 python-dateutil==2.9.0.post0
-pyyaml==6.0.3
-pyzmq==27.1.0
+python-qt-binding==1.1.2
+pytorch-lightning==2.5.5
+pyts==0.13.0
+pytz==2025.2
+PyYAML==6.0.2
+pyzmq==27.0.2
+qpth==0.0.18
+qt-dotgraph==2.2.4
+qt-gui==2.2.4
+qt-gui-cpp==2.2.4
+qt-gui-py-common==2.2.4
+quality-of-service-demo-py==0.20.5
+rcl-interfaces==1.2.2
+rclpy==3.3.17
+rcutils==5.1.6
+referencing==0.36.2
 requests==2.32.5
-scipy==1.16.2
-sentry-sdk==2.40.0
+resource-retriever==3.1.3
+rich==14.1.0
+rmw-dds-common==1.6.0
+ros2action==0.18.13
+ros2bag==0.15.15
+ros2cli==0.18.13
+ros2component==0.18.13
+ros2doctor==0.18.13
+ros2interface==0.18.13
+ros2launch==0.19.10
+ros2lifecycle==0.18.13
+ros2multicast==0.18.13
+ros2node==0.18.13
+ros2param==0.18.13
+ros2pkg==0.18.13
+ros2run==0.18.13
+ros2service==0.18.13
+ros2topic==0.18.13
+rosbag2-interfaces==0.15.15
+rosbag2-py==0.15.15
+rosgraph-msgs==1.2.2
+rosidl-adapter==3.1.7
+rosidl-cli==3.1.7
+rosidl-cmake==3.1.7
+rosidl-generator-c==3.1.7
+rosidl-generator-cpp==3.1.7
+rosidl-generator-py==0.14.5
+rosidl-parser==3.1.7
+rosidl-runtime-py==0.9.3
+rosidl-typesupport-c==2.0.2
+rosidl-typesupport-cpp==2.0.2
+rosidl-typesupport-fastrtps-c==2.2.2
+rosidl-typesupport-fastrtps-cpp==2.2.2
+rosidl-typesupport-introspection-c==3.1.7
+rosidl-typesupport-introspection-cpp==3.1.7
+rpds-py==0.27.0
+rpyutils==0.2.1
+rqt-action==2.0.1
+rqt-bag==1.1.5
+rqt-bag-plugins==1.1.5
+rqt-console==2.0.3
+rqt-graph==1.3.1
+rqt-gui==1.1.7
+rqt-gui-py==1.1.7
+rqt-msg==1.2.0
+rqt-plot==1.1.5
+rqt-publisher==1.5.0
+rqt-py-common==1.1.7
+rqt-py-console==1.0.2
+rqt-reconfigure==1.1.2
+rqt-service-caller==1.0.5
+rqt-shell==1.0.2
+rqt-srv==1.0.3
+rqt-topic==1.5.0
+scikit-learn==1.7.2
+scipy==1.16.1
+scs==3.2.8
+seaborn==0.13.2
+sensor-msgs==4.9.0
+sensor-msgs-py==4.9.0
+sentry-sdk==2.35.0
 setuptools==80.9.0
+shape-msgs==4.9.0
+simplejson==3.20.1
 six==1.17.0
 smmap==5.0.2
+sros2==0.10.7
 stack-data==0.6.3
+statistics-msgs==1.2.2
+std-msgs==4.9.0
+std-srvs==4.9.0
+stereo-msgs==4.9.0
 sympy==1.14.0
+teleop-twist-keyboard==2.4.0
+tensorstore==0.1.76
+tf2-geometry-msgs==0.25.16
+tf2-kdl==0.25.16
+tf2-msgs==0.25.16
+tf2-py==0.25.16
+tf2-ros-py==0.25.16
+tf2-sensor-msgs==0.25.16
+tf2-tools==0.25.16
+threadpoolctl==3.6.0
+toml==0.10.2
+toolz==1.0.0
+topic-monitor==0.20.5
 torch==2.8.0
+torchaudio==2.8.0
+torchdiffeq==0.2.5
+torchmetrics==1.8.2
+torchsde==0.2.6
+torchvision==0.23.0
 tornado==6.5.2
+tqdm==4.67.1
 traitlets==5.14.3
+trajectory-msgs==4.9.0
+trampoline==0.1.2
+treescope==0.1.10
 triton==3.4.0
-typing-extensions==4.15.0
-typing-inspection==0.4.2
+turtlesim==1.4.2
+typing-inspection==0.4.1
+typing_extensions==4.15.0
+tzdata==2025.2
+unique-identifier-msgs==2.2.1
 urllib3==2.5.0
-wandb==0.22.2
-wcwidth==0.2.14
-ipykernel
+visualization-msgs==4.9.0
+wadler_lindig==0.1.7
+wandb==0.21.1
+wcwidth==0.2.13
+yarl==1.22.0
+zipp==3.23.0
