--- a/energy/train_config.yaml
+++ b/energy/train_config.yaml
@@ -5,10 +5,10 @@ weights:
   w_sup: 1e0
 
 training:
-  TRAINING_EPOCHS: 5
+  TRAINING_EPOCHS: 10
   CHECKPOINT_AFTER: 50
   LEARNING_RATE: 1e-3
   WEIGHT_DECAY: 1e-5
   PATIENCE: 10
-  WANDB_PROJECT: l2o_ssl_miqp_robot_nav
+  WANDB_PROJECT: l2o_ssl_miqp_energy
   RUN_NAME_PREFIX: ssl_
