some functionalities to automate running the training script

--- a/energy/train_config.yaml
+++ b/energy/train_config.yaml
@@ -1,14 +1,15 @@
 weights:
-  w_obj: 0.0
-  w_slack: 0.0
+  w_obj: 1e-5
+  w_slack: 1.0
   w_con: 0.0
-  w_sup: 1e0
+  w_sup: 1e5
 
 training:
-  TRAINING_EPOCHS: 10
+  TRAINING_EPOCHS: 20
   CHECKPOINT_AFTER: 50
   LEARNING_RATE: 1e-3
   WEIGHT_DECAY: 1e-5
   PATIENCE: 10
   WANDB_PROJECT: l2o_ssl_miqp_energy
   RUN_NAME_PREFIX: ssl_
+
