--- a/robot_nav/train_config.yaml
+++ b/robot_nav/train_config.yaml
@@ -5,10 +5,14 @@ weights:
   w_sup: 1e0
 
 training:
-  TRAINING_EPOCHS: 5
+  TRAINING_EPOCHS: 20
   CHECKPOINT_AFTER: 50
   LEARNING_RATE: 1e-3
   WEIGHT_DECAY: 1e-5
   PATIENCE: 10
   WANDB_PROJECT: l2o_ssl_miqp_robot_nav
   RUN_NAME_PREFIX: ssl_
+
+save_stats:
+  enabled: true
+  filename: robot_nav_supervised
